fix alignment topics

--- a/css/custom.css
+++ b/css/custom.css
@@ -231,3 +231,6 @@
     color: white;
     text-decoration: underline;
 }
+#accordionFlushExample button{
+    text-align: left;
+}
